# MonitorX

./: .env.example  .gitignore  BANNERS_ADDED.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  GITHUB_INFO.md  LICENSE  LICENSE_UPDATE_SUMMARY.md  MVP_COMPLETION_SUMMARY.md  NOTICE  PROJECT_SUMMARY.md  PROOF_OF_WAI.md  README.md  REPO_DESCRIPTION.md  SECURITY.md  TESTING.md  VERIFICATION_GUIDE.md  add_license_headers.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_dashboard.py  run_server.py  verify_quick.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
docs/: ALERTING.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  SDK_ADVANCED.md  SECURITY.md
examples/: alerting_setup.py  basic_usage.py  docker-compose.yml  sdk_advanced_features.py
src/monitorx/: __init__.py  auth.py  server.py
src/monitorx/api/: __init__.py  models.py  routes.py
src/monitorx/config/: __init__.py
src/monitorx/dashboard/: app.py
src/monitorx/middleware/: __init__.py  rate_limit.py
src/monitorx/sdk/: __init__.py  client.py  context.py  decorators.py
src/monitorx/services/: __init__.py  alerting.py  metrics_collector.py  storage.py
src/monitorx/types/: __init__.py
tests/: __init__.py  conftest.py  test_alerting.py  test_api.py  test_metrics_collector.py  test_sdk.py  test_sdk_enhanced.py  test_types.py
